--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-1.0">
     <title>Sport Challenge App</title>
     <!-- Tailwind CSS CDN für das Styling -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -121,6 +121,15 @@
             visibility: visible;
             opacity: 1;
         }
+        /* Mobile-spezifische Anpassung für das Datumsfeld */
+        @media (max-width: 640px) {
+            input[type="date"] {
+                /* Stellt sicher, dass das Feld nicht breiter als der Container wird */
+                width: 100%; 
+                /* Verhindert, dass der Kalender-Button den Platz sprengt */
+                box-sizing: border-box; 
+            }
+        }
     </style>
 
     <!-- Firebase JS SDKs -->
@@ -133,6 +142,8 @@
             // =====================================
             // Globale Variablen und UI-Elemente
             // =====================================
+            const APP_VERSION = '1.3.1'; // NEU: App-Versionsnummer
+
             const SPORT_WEIGHTS = {
                 'Laufen': 1.5,
                 'Schwimmen': 1.8,
@@ -599,8 +610,8 @@
                                     </div>
                                     <div>
                                         <label for="date-input" class="block text-slate-300 font-semibold mb-1">Datum</label>
-                                        <!-- MOBILE FIX: Nutze w-full und p-3 für bessere Anpassung -->
-                                        <input type="date" id="date-input" class="w-full p-3 rounded-lg bg-slate-800 text-white border border-slate-600 focus:outline-none focus:ring-2 focus:ring-primary">
+                                        <!-- KORREKTUR: Entferne unnötige w-full, da es im CSS geregelt ist -->
+                                        <input type="date" id="date-input" class="p-3 rounded-lg bg-slate-800 text-white border border-slate-600 focus:outline-none focus:ring-2 focus:ring-primary w-full">
                                     </div>
                                     <div>
                                         <label for="minutes-input" class="block text-slate-300 font-semibold mb-1">Minuten</label>
@@ -649,12 +660,15 @@
                                 
                                 <!-- Über die App Sektion -->
                                 <section class="mb-8">
-                                    <h2 class="text-2xl font-bold text-primary mb-4">Über die App</h2>
+                                    <h2 class="text-2xl font-bold text-primary mb-4 flex justify-between items-center">
+                                        Über die App
+                                        <span class="text-sm text-slate-400">Version ${APP_VERSION}</span> 
+                                    </h2>
                                     <div class="space-y-4 text-slate-300">
                                         <p>Hey! Diese App ist dein persönlicher Motivator für die Sport Challenge 2025/26. Dein Ziel: Halte deinen sportlichen Fortschritt fest, messe dich mit Freunden und erreiche die Gesundheitsziele der WHO.</p>
 
                                         <h3 class="text-xl font-bold text-white mt-4 mb-2">Deine Ziele & die WHO-Empfehlungen</h3>
-                                        <ul class="list-disc list-inside space-y-1 ml-4">
+                                        <ul class="list-disc list-inside space-y-1 sm:ml-0">
                                             <li><span class="font-semibold">WHO gesund aktiv:</span> Das Basis-Ziel. Es entspricht der minimal empfohlenen aeroben Aktivität pro Woche, auf ein Jahr hochgerechnet (8.000 Min).</li>
                                             <li><span class="font-semibold">WHO fit & stark:</span> Das Herausforderungs-Ziel für maximale Gesundheitswirkung (15.000 Min).</li>
                                             <li><span class="font-semibold">Krafttraining:</span> Die WHO empfiehlt mindestens zweimal pro Woche muskelkräftigende Übungen. Der Counter im Dashboard hilft dir, diesen wöchentlichen Rhythmus zu verfolgen.</li>
@@ -662,7 +676,7 @@
                                         
                                         <h3 class="text-xl font-bold text-white mt-4 mb-2">Warum die Gewichtungen (x-Faktor)?</h3>
                                         <p>Nicht jede Minute ist gleich! Die Gewichtungsfaktoren (z.B. Laufen x1.5) spiegeln die geschätzte Intensität wider. Aktivitäten mit höherer Intensität (z.B. Schwimmen oder HIIT) lassen deine gewichteten Minuten schneller wachsen:</p>
-                                        <ul class="list-disc list-inside space-y-1 ml-4">
+                                        <ul class="list-disc list-inside space-y-1 sm:ml-0">
                                             <li>Faktoren > 1.0: Höhere Intensität (z.B. Laufen, Schwimmen).</li>
                                             <li>Faktoren < 1.0: Geringere Intensität (z.b. Yoga, Wandern).</li>
                                         </ul>
@@ -1757,3 +1771,4 @@
     </footer>
 </body>
 </html>
+
