--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
                                     </div>
                                     <div>
                                         <label for="date-input" class="block text-slate-300 font-semibold mb-1">Datum</label>
-                                        <!-- KORREKTUR: Entferne unnötige w-full, da es im CSS geregelt ist -->
+                                        <!-- KORREKTUR: w-full für Mobilgeräte -->
                                         <input type="date" id="date-input" class="p-3 rounded-lg bg-slate-800 text-white border border-slate-600 focus:outline-none focus:ring-2 focus:ring-primary w-full">
                                     </div>
                                     <div>
@@ -1093,24 +1093,30 @@
                     strengthCounter = `
                         <div class="mt-6 p-4 rounded-xl bg-slate-800 border border-slate-600">
                             <div class="flex justify-between items-start">
-                                <div class="relative tooltip-container">
-                                    <h3 class="text-lg font-bold text-white mb-1 flex items-center">
-                                        Krafttraining (2x/Woche)
-                                        <span class="ml-2 text-primary cursor-pointer text-sm">
-                                            [i]
-                                            <span class="tooltip-content text-xs">${strengthTooltipContent}</span>
+                                <!-- NEUE STRUKTUR FÜR MOBILE OPTIMIERUNG -->
+                                <div class="w-full">
+                                    <div class="flex justify-between items-center mb-2">
+                                        <div class="relative tooltip-container">
+                                            <h3 class="text-lg font-bold text-white flex items-center">
+                                                Krafttraining
+                                                <span class="ml-2 text-primary cursor-pointer text-sm">
+                                                    [i]
+                                                    <span class="tooltip-content text-xs">${strengthTooltipContent}</span>
+                                                </span>
+                                            </h3>
+                                        </div>
+                                        <span class="text-sm text-slate-400">Soll: 2x/Woche</span>
+                                    </div>
+                                    
+                                    <div class="flex justify-between items-center">
+                                        <span class="text-white text-xl font-extrabold">
+                                            <span class="text-white">${actualDays.toFixed(0)}</span> / ${requiredDays.toFixed(1)} Tage erreicht
                                         </span>
-                                    </h3>
+                                        <div class="px-3 py-1 rounded-full text-white font-semibold ${isGoalMet ? 'bg-accent' : 'bg-secondary'} text-sm">
+                                            ${isGoalMet ? 'Im Zeitplan!' : 'Aufholen nötig'}
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="px-3 py-1 rounded-full text-white font-semibold ${isGoalMet ? 'bg-accent' : 'bg-secondary'} text-sm">
-                                    ${isGoalMet ? 'Im Zeitplan!' : 'Aufholen nötig'}
-                                </div>
-                            </div>
-                            
-                            <div class="flex items-center space-x-4 mt-2">
-                                <span class="text-white text-xl font-extrabold">
-                                    <span class="text-white">${actualDays.toFixed(0)}</span> / ${requiredDays.toFixed(1)} Tage erreicht
-                                </span>
                             </div>
                         </div>
                     `;
@@ -1771,4 +1777,5 @@
     </footer>
 </body>
 </html>
+
 
